--- a/src/qt/locale/bitcoin_en.ts.2
+++ b/src/qt/locale/bitcoin_en.ts.2
@@ -5,23 +5,21 @@
 <context>
     <name>AboutDialog</name>
     <message>
-        <source>About Infinitecoin</source>
+        <source>About Bitcoin</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <source>&lt;b&gt;Infinitecoin&lt;/b&gt; version</source>
+        <source>&lt;b&gt;Bitcoin&lt;/b&gt; version</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <source>Offical Website: &lt;a href=&quot;http://www.infinitecoin.com/&quot;&gt;www.infinitecoin.com&lt;/a&gt;</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Offical Forums: &lt;a href=&quot;http://www.infinitecointalk.org/&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;www.infinitecointalk.org&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p&gt;Infinitecoin community website: &lt;a href=&quot;https://www.infinitecoin.in&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;https://www.infinitecoin.in&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Infinitecoin community website:https://www.infinitecoin.in&lt;/p&gt;&lt;p&gt;Distributed under the MIT/X11 software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php.&lt;/p&gt;&lt;p&gt;This product includes software developed by the OpenSSL Project for use in the OpenSSL Toolkit (http://www.openssl.org/) and cryptographic software written by Eric Young (eay@cryptsoft.com) and UPnP software written by Thomas Bernard.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</source>
+        <source>Copyright © 2009-2012 Bitcoin Developers
+
+This is experimental software.
+
+Distributed under the MIT/X11 software license, see the accompanying file license.txt or http://www.opensource.org/licenses/mit-license.php.
+
+This product includes software developed by the OpenSSL Project for use in the OpenSSL Toolkit (http://www.openssl.org/) and cryptographic software written by Eric Young (eay@cryptsoft.com) and UPnP software written by Thomas Bernard.</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
@@ -45,6 +43,10 @@
     </message>
     <message>
         <source>&amp;New Address</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>These are your Bitcoin addresses for receiving payments. You may want to give a different one to each sender so you can keep track of who is paying you.</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -101,10 +103,6 @@
     </message>
     <message>
         <source>Could not write to file %1.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>These are your Infinitecoin addresses for receiving payments. You may want to give a different one to each sender so you can keep track of who is paying you.</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
@@ -178,7 +176,16 @@
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>WARNING: If you encrypt your wallet and lose your passphrase, you will &lt;b&gt;LOSE ALL OF YOUR BITCOINS&lt;/b&gt;!
+Are you sure you wish to encrypt your wallet?</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>Wallet encrypted</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Bitcoin will close now to finish the encryption process. Remember that encrypting your wallet cannot fully protect your bitcoins from being stolen by malware infecting your computer.</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -213,20 +220,19 @@
         <source>Wallet passphrase was successfully changed.</source>
         <translation type="unfinished"></translation>
     </message>
-    <message>
-        <source>WARNING: If you encrypt your wallet and lose your passphrase, you will &lt;b&gt;LOSE ALL OF YOUR INFINITECOINS&lt;/b&gt;!
-Are you sure you wish to encrypt your wallet?</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Infinitecoin will close now to finish the encryption process. Remember that encrypting your wallet cannot fully protect your infinitecoins from being stolen by malware infecting your computer.</source>
-        <translation type="unfinished"></translation>
-    </message>
 </context>
 <context>
     <name>BitcoinGUI</name>
     <message>
+        <source>Bitcoin Wallet</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>Sign &amp;message...</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Show/Hide &amp;Bitcoin</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -278,6 +284,14 @@ Are you sure you wish to encrypt your wallet?</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>&amp;About %1</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Show information about Bitcoin</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>About &amp;Qt</source>
         <translation type="unfinished"></translation>
     </message>
@@ -317,6 +331,10 @@ Are you sure you wish to encrypt your wallet?</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>Send coins to a Bitcoin address</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>Sign a message to prove you own a Bitcoin address</source>
         <translation type="unfinished"></translation>
     </message>
@@ -326,6 +344,14 @@ Are you sure you wish to encrypt your wallet?</source>
     </message>
     <message>
         <source>S&amp;ignatures</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Modify configuration options for Bitcoin</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Show or hide the Bitcoin window</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -380,9 +406,13 @@ Are you sure you wish to encrypt your wallet?</source>
         <source>[testnet]</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>Bitcoin client</source>
+        <translation type="unfinished"></translation>
+    </message>
     <message numerus="yes">
         <source>%n active connection(s) to Bitcoin network</source>
-        <translation type="obsolete">
+        <translation>
             <numerusform>%n active connection to Bitcoin network</numerusform>
             <numerusform>%n active connections to Bitcoin network</numerusform>
         </translation>
@@ -460,6 +490,10 @@ Address: %4
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>URI can not be parsed! This can be caused by an invalid Bitcoin address or malformed URI parameters.</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>Wallet is &lt;b&gt;encrypted&lt;/b&gt; and currently &lt;b&gt;unlocked&lt;/b&gt;</source>
         <translation type="unfinished"></translation>
     </message>
@@ -484,74 +518,7 @@ Address: %4
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <source>A fatal error occured. Infinitecoin can no longer continue safely and will quit.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Infinitecoin</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Wallet</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>&amp;Mining</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Configure mining</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Send coins to a Infinitecoin address</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>&amp;About Infinitecoin</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Show information about Infinitecoin</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Modify configuration options for Infinitecoin</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Show/Hide &amp;Infinitecoin</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Show or hide the Infinitecoin window</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Infinitecoin client</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message numerus="yes">
-        <source>%n active connection(s) to Infinitecoin network</source>
-        <translation type="unfinished">
-            <numerusform></numerusform>
-            <numerusform></numerusform>
-        </translation>
-    </message>
-    <message>
-        <source>Current difficulty is %1.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Mining Infinitecoins at %1 hashes per second</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Not mining Infinitecoins</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>URI can not be parsed! This can be caused by an invalid Infinitecoin address or malformed URI parameters.</source>
+        <source>A fatal error occured. Bitcoin can no longer continue safely and will quit.</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
@@ -605,6 +572,10 @@ Address: %4
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>The entered address &quot;%1&quot; is not a valid Bitcoin address.</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>Could not unlock wallet.</source>
         <translation type="unfinished"></translation>
     </message>
@@ -612,13 +583,13 @@ Address: %4
         <source>New key generation failed.</source>
         <translation type="unfinished"></translation>
     </message>
-    <message>
-        <source>The entered address &quot;%1&quot; is not a valid Infinitecoin address.</source>
-        <translation type="unfinished"></translation>
-    </message>
 </context>
 <context>
     <name>GUIUtil::HelpMessageBox</name>
+    <message>
+        <source>Bitcoin-Qt</source>
+        <translation type="unfinished"></translation>
+    </message>
     <message>
         <source>version</source>
         <translation type="unfinished"></translation>
@@ -647,65 +618,6 @@ Address: %4
         <source>Show splash screen on startup (default: 1)</source>
         <translation type="unfinished"></translation>
     </message>
-    <message>
-        <source>Infinitecoin-Qt</source>
-        <translation type="unfinished"></translation>
-    </message>
-</context>
-<context>
-    <name>MiningPage</name>
-    <message>
-        <source>Mining</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Username</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Server</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Password</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Port</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Start Mining</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Scantime</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Threads</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Debug Logging</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Type</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Solo Mining</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Pool Mining</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>9332</source>
-        <translation type="unfinished"></translation>
-    </message>
 </context>
 <context>
     <name>OptionsDialog</name>
@@ -726,6 +638,14 @@ Address: %4
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>Automatically start Bitcoin after logging in to the system.</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>&amp;Start Bitcoin on system login</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>Detach block and address databases at shutdown. This means they can be moved to another data directory, but it slows down shutdown. The wallet is always detached.</source>
         <translation type="unfinished"></translation>
     </message>
@@ -738,7 +658,15 @@ Address: %4
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>Automatically open the Bitcoin client port on the router. This only works when your router supports UPnP and it is enabled.</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>Map port using &amp;UPnP</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Connect to the Bitcoin network through a SOCKS proxy (e.g. when connecting through Tor).</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -798,11 +726,19 @@ Address: %4
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>The user interface language can be set here. This setting will take effect after restarting Bitcoin.</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>&amp;Unit to show amounts in:</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
         <source>Choose the default subdivision unit to show in the interface and when sending coins.</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Whether to show Bitcoin addresses in the transaction list or not.</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -830,35 +766,11 @@ Address: %4
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>This setting will take effect after restarting Bitcoin.</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>The supplied proxy address is invalid.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Automatically start Infinitecoin after logging in to the system.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>&amp;Start Infinitecoin on system login</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Automatically open the Infinitecoin client port on the router. This only works when your router supports UPnP and it is enabled.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Connect to the Infinitecoin network through a SOCKS proxy (e.g. when connecting through Tor).</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>The user interface language can be set here. This setting will take effect after restarting Infinitecoin.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Whether to show Infinitecoin addresses in the transaction list or not.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>This setting will take effect after restarting Infinitecoin.</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
@@ -866,6 +778,10 @@ Address: %4
     <name>OverviewPage</name>
     <message>
         <source>Form</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>The displayed information may be out of date. Your wallet automatically synchronizes with the Bitcoin network after a connection is established, but this process has not completed yet.</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -909,11 +825,7 @@ Address: %4
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <source>The displayed information may be out of date. Your wallet automatically synchronizes with the Infinitecoin network after a connection is established, but this process has not completed yet.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Out of sync</source>
+        <source>out of sync</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
@@ -967,6 +879,10 @@ Address: %4
 <context>
     <name>RPCConsole</name>
     <message>
+        <source>Bitcoin debug window</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>Client name</source>
         <translation type="unfinished"></translation>
     </message>
@@ -980,6 +896,10 @@ Address: %4
     </message>
     <message>
         <source>&amp;Information</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Client</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -1023,11 +943,19 @@ Address: %4
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>Open the Bitcoin debug logfile from the current data directory. This can take a few seconds for large logfiles.</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>&amp;Open</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
         <source>Command-line options</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Show the Bitcoin-Qt help message to get a list with possible Bitcoin command-line options.</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -1047,31 +975,15 @@ Address: %4
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>Welcome to the Bitcoin RPC console.</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>Use up and down arrows to navigate history, and &lt;b&gt;Ctrl-L&lt;/b&gt; to clear screen.</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
         <source>Type &lt;b&gt;help&lt;/b&gt; for an overview of available commands.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Infinitecoin - Debug window</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Bitcoin Core</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Open the Infinitecoin debug logfile from the current data directory. This can take a few seconds for large logfiles.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Show the Infinitecoin-Qt help message to get a list with possible Infinitecoin command-line options.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Welcome to the Infinitecoin RPC console.</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
@@ -1099,6 +1011,10 @@ Address: %4
     </message>
     <message>
         <source>Balance:</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>123.456 BTC</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -1153,10 +1069,6 @@ Address: %4
         <source>Error: The transaction was rejected. This might happen if some of the coins in your wallet were already spent, such as if you used a copy of wallet.dat and coins were spent in the copy but not marked as spent here.</source>
         <translation type="unfinished"></translation>
     </message>
-    <message>
-        <source>123.456 IFC</source>
-        <translation type="unfinished"></translation>
-    </message>
 </context>
 <context>
     <name>SendCoinsEntry</name>
@@ -1205,12 +1117,16 @@ Address: %4
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <source>Enter a Infinitecoin address (starts with i)</source>
+        <source>Enter a Bitcoin address (e.g. 1NS17iag9jJgTHD1VXjvLCEnZuQ3rJDE9L)</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
 <context>
     <name>SignVerifyMessageDialog</name>
+    <message>
+        <source>Messaging - Sign / Verify a Message</source>
+        <translation type="unfinished"></translation>
+    </message>
     <message>
         <source>&amp;Sign Message</source>
         <translation type="unfinished"></translation>
@@ -1280,7 +1196,15 @@ Address: %4
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>Enter a Bitcoin address (e.g. 1NS17iag9jJgTHD1VXjvLCEnZuQ3rJDE9L)</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>Click &quot;Sign Message&quot; to generate signature</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Enter Bitcoin signature</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -1329,18 +1253,6 @@ Address: %4
     </message>
     <message>
         <source>Message verified.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Signatures - Sign / Verify a Message</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Enter a Infinitecoin address (e.g. iNS17iag9jJgTHD1VXjvLCEnZuQ3rJDE9L)</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Enter Infinitecoin signature</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
@@ -1737,7 +1649,15 @@ Address: %4
 <context>
     <name>bitcoin-core</name>
     <message>
+        <source>Bitcoin version</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>Usage:</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Send command to -server or bitcoind</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -1750,6 +1670,14 @@ Address: %4
     </message>
     <message>
         <source>Options:</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Specify configuration file (default: bitcoin.conf)</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Specify pid file (default: bitcoind.pid)</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -1774,6 +1702,10 @@ Address: %4
     </message>
     <message>
         <source>Specify connection timeout (in milliseconds)</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Listen for connections on &lt;port&gt; (default: 8333 or testnet: 18333)</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -1901,6 +1833,10 @@ Address: %4
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>Listen for JSON-RPC connections on &lt;port&gt; (default: 8332)</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>Allow JSON-RPC connections from specified IP address</source>
         <translation type="unfinished"></translation>
     </message>
@@ -1966,6 +1902,14 @@ SSL options: (see the Bitcoin Wiki for SSL setup instructions)</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>Cannot obtain a lock on data directory %s.  Bitcoin is probably already running.</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Bitcoin</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>Unable to bind to %s on this computer (bind returned error %d, %s)</source>
         <translation type="unfinished"></translation>
     </message>
@@ -1987,6 +1931,14 @@ SSL options: (see the Bitcoin Wiki for SSL setup instructions)</source>
     </message>
     <message>
         <source>Error loading wallet.dat: Wallet corrupted</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Error loading wallet.dat: Wallet requires newer version of Bitcoin</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Wallet needed to be rewritten: restart Bitcoin to complete</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
@@ -2058,6 +2010,10 @@ SSL options: (see the Bitcoin Wiki for SSL setup instructions)</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>Unable to bind to %s on this computer. Bitcoin is probably already running.</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>Find peers using internet relay chat (default: 0)</source>
         <translation type="unfinished"></translation>
     </message>
@@ -2098,6 +2054,17 @@ SSL options: (see the Bitcoin Wiki for SSL setup instructions)</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <source>%s, you must set a rpcpassword in the configuration file:
+ %s
+It is recommended you use the following random password:
+rpcuser=bitcoinrpc
+rpcpassword=%s
+(you do not need to remember this password)
+If the file does not exist, create it with owner-readable-only file permissions.
+</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <source>Error</source>
         <translation type="unfinished"></translation>
     </message>
@@ -2112,62 +2079,7 @@ If the file does not exist, create it with owner-readable-only file permissions.
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <source>%s, you must set a rpcpassword in the configuration file:
- %s
-It is recommended you use the following random password:
-rpcuser=infinitecoinrpc
-rpcpassword=%s
-(you do not need to remember this password)
-If the file does not exist, create it with owner-readable-only file permissions.
-</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Cannot obtain a lock on data directory %s.  Infinitecoin is probably already running.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Unable to bind to %s on this computer. Infinitecoin is probably already running.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Warning: Please check that your computer&apos;s date and time are correct.  If your clock is wrong Infinitecoin will not work properly.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Infinitecoin version</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Infinitecoin</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Error loading wallet.dat: Wallet requires newer version of Infinitecoin</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Listen for JSON-RPC connections on &lt;port&gt; (default: 9332)</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Listen for connections on &lt;port&gt; (default: 9333 or testnet: 19333)</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Send command to -server or infinitecoind</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Specify configuration file (default: infinitecoin.conf)</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Specify pid file (default: infinitecoind.pid)</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <source>Wallet needed to be rewritten: restart Infinitecoin to complete</source>
+        <source>Warning: Please check that your computer&apos;s date and time are correct.  If your clock is wrong Bitcoin will not work properly.</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
